<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="matt.mcauliffe.goapply.activities.RegisterScreenActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/userButtonText"
                android:id="@+id/userButton"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/recruiterButtonText"
                android:id="@+id/recruiterButton"/>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/companyButtonText"
                android:id="@+id/companyButton"/>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/genericUserRegistration">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/GURegisterEmailTextBox"
                android:text="@string/emailPrompt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/GURegisterEmailTextBox"
                android:inputType="textEmailAddress"
                android:hint="@string/emailHint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/GURegisterPasswordTextBox"
                android:text="@string/passwordPrompt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/GURegisterPasswordTextBox"
                android:inputType="textPassword"
                android:hint="@string/passwordHint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/recruiterRegistration">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/RRegisterEmailTextBox"
                android:text="@string/emailPrompt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RRegisterEmailTextBox"
                android:inputType="textEmailAddress"
                android:hint="@string/emailHint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/RRegisterPasswordTextBox"
                android:text="@string/passwordPrompt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RRegisterPasswordTextBox"
                android:inputType="textPassword"
                android:hint="@string/passwordHint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/RRegisterCompanyTextBox"
                android:text="@string/companyPrompt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/RRegisterCompanyTextBox"
                android:inputType="text"
                android:hint="@string/companyHint"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/companyRegistration">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/CRegisterCompanyTextBox"
                android:text="@string/companyPrompt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CRegisterCompanyTextBox"
                android:inputType="text"
                android:hint="@string/companyHint"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:labelFor="@+id/CRegisterPasswordTextBox"
                android:text="@string/passwordPrompt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/CRegisterPasswordTextBox"
                android:inputType="textPassword"
                android:hint="@string/passwordHint"/>
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/registerButtonText"
            android:id="@+id/registerButton"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cancelText"
            android:id="@+id/registrationCancelButton"/>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>
